feat: Blogpost feed function/design

--- a/app/css/blogPostFeed.css
+++ b/app/css/blogPostFeed.css
@@ -1,32 +1,85 @@
-body {
-    margin: 20px;
-    background: #343d4e;
-}
-
 .content{
+    width: 100%;
+    height: 100%;
+    background: #161616;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding-top: 150px;
+}
+
+.navBarHolder{
+    width: 100%;
+    height: min-content;
+    position: fixed;
+    top: 0;
+    background: #161616;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.navBar{
+    width: 100%;
+    height: min-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.navBar *{
+    margin: 15px;
+}
+
+.userNavBar{
+    display: flex;
+    align-items: center;
+}
+
+.userNavBar *{
+    margin-inline-start: 30px;
+}
+
+.searchBar{
+    border-radius: 10px;
+    height: 30px;
+    width: 450px;
+    color: black;
+    background-color: white;
+    margin-right: 50px;
+    align-self: center;
+}
+
+.divider{
+    width: 90%;
+    height: 1px;
+    background-color: #00BA77;
+}
+
+.blogPost img{
+    max-width: 50%;
+    max-height: 50%;
 }
 
 .blogPostPreview{
-    width: 50vw;
+    width: 60vw;
+    max-width: 1000px;
+    height: fit-content;
     margin: 30px;
     display: flex;
     flex-direction: column;
-    background-color:#4b5871;
-    border-radius: 30px;
-}
-
-.blogPostPreview *{
-    margin: 10px;
+    background-color:#161616;
+    border-style: solid;
+    border-color: #00BA77;
+    border-width: 2px;
+    border-radius: 10px;
+    
 }
 
 .blogPostPreview img{
-    margin: auto;
     display: block;
-    border-radius: 30px;
 }
 
 .blogPostTitle{
@@ -36,9 +89,46 @@ body {
 
 .blogPostContent{
     display: flex;
+    justify-content: space-around;
+}
+.blogPostContent *{
+    margin-top: 30px;
+    margin-bottom: 70px;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
 }
 
 .blogPostContent p{
-    width: 600px;
-    height: 600px;
+    width: 45%;
+}
+
+.blogPostContent img{
+    border-radius: 30px;
+    max-width: 50%;
+}
+
+.userProfile{
+    display: flex;
+    max-width: 15vw;
+    min-width: 8vw;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #00BA77;
+    border-radius: 5px 0 10px 0;
+}
+
+.userProfile img{
+    align-self: center;
+}
+
+.userProfile p{
+    align-self: center;
+    text-align: center;
+    width: 100%;
+}
+
+.userProfilePicture{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
