--- a/app/css/root.css
+++ b/app/css/root.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+/* Reset */
+@import url('./normalize.css');
 
 :root {
     --black-background: #161616;
@@ -16,6 +17,52 @@
 }
 
 * {
-    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-family: "Plus Jakarta Sans", sans-serif;
+
+    color: var(--white);
+
     outline: none;
+    text-decoration: none;
+}
+
+.normal-link {
+    text-decoration: underline;
+}
+
+body {
+    background-color: var(--black-background);
+}
+
+button, input, select {
+    border: 1px solid var(--green-dark);
+    outline: none;
+
+    background-color: var(--black-background);
+    border-radius: var(--input-radius);
+
+    min-width: 200px;
+    min-height: 25px;
+
+    padding: 5px var(--input-placeholder-offset);
+    background-color: transparent;
+
+    transition: all 0.2s ease;
+}
+
+button {
+    min-width: 120px;
+    border-color: var(--green-bright);
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: var(--green-dark);
+}
+
+input:focus, select:focus {
+    border-color: var(--green-bright);
+}
+
+input::placeholder {
+    color: var(--grey-text);
 }
