--- a/app/css/blogpost.css
+++ b/app/css/blogpost.css
@@ -1,5 +1,5 @@
 body {
-    background: #161616;
+    background: #ec0000;
 }
 
 .blogPost{
@@ -12,4 +12,10 @@ body {
 
 .blogPost img{
     border-radius: 30px;
+}
+
+.editButton{
+    width: 50px;
+    height: 50px;
+    background-color: green;
 }
