--- a/app/css/root.css
+++ b/app/css/root.css
@@ -26,7 +26,7 @@
 
     color: var(--white);
 
-    outline: none;
+    outline: none!important;
     text-decoration: none;
 }
 
@@ -42,7 +42,7 @@ body {
     background-color: var(--black-background);
 }
 
-button, input, select {
+button, input, select, textarea {
     border: 1px solid var(--green-dark);
     outline: none;
 
@@ -53,6 +53,10 @@ button, input, select {
     background-color: transparent;
 
     transition: all 0.2s ease;
+}
+
+label {
+    margin-left: var(--input-placeholder-offset);
 }
 
 button {
